# openide

./: AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  setup.cfg  setup.py
examples/tutorials/nbm-selection/: setup.cfg
examples/tutorials/nbm-selection-01/: README.md  setup.cfg
examples/tutorials/nbm-selection-01/my_editor/: my_editor.ui
examples/tutorials/nbm-selection-01/my_viewer/: __init__.py  my_viewer.ui
examples/tutorials/nbm-selection-01/nbm_selection_01/: __init__.py
examples/tutorials/nbm-selection-01/nbm_selection_01/my_editor/: __init__.py
examples/tutorials/nbm-selection-01/nbm_selection_01/my_viewer/: __init__.py
examples/tutorials/nbm-selection/my_api/: event.py
examples/tutorials/nbm-selection/my_editor/: __init__.py
openide/: __init__.py  integration.py
openide/actions/: __init__.py
openide/explorer/: __init__.py  abstract_view.py  model.py  selection.py  tree_view.py
openide/lookups/: __init__.py  egg_info.py  global_context.py  main_lookup.py  services.py
openide/nodes/: __init__.py  properties.py  properties_support.py
openide/nodes/_like_netbeans/: __init__.py  async_children.py  child_factory.py  children.py  children_storage.py  entry_support.py  entry_support_default.py  entry_support_lazy.py  filter_node.py  generic_node.py  node.py  node_listener.py  node_operations.py  properties.py  properties_support.py  sync_children.py
openide/startup/: __init__.py  main.py
openide/utils/: __init__.py  classes.py  datastructures.py  mutex.py  typing.py
openide/windows/: __init__.py  context_tracker.py  main_window.py  top_component.py  window_manager.py
tests/nodes/properties/: test_descriptor_property.py  test_feature_descriptor.py  test_getter_setter_property.py
tests/utils/: test_metaclass_resolver.py
