[metadata]
name = openide
description = Python implementation of openide/Netbeans Platform concepts
long_description = file: README.md AUTHORS.md CHANGELOG.md
long_description_content_type = text/markdown
author = Axel Voitier
author_email = axel.voitier@gmail.com
license = MPLv2
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: OpenIDE
    Intended Audience :: Developers
    License :: License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Topic :: Desktop Environment
    Topic :: Software Development :: User Interfaces
    Topic :: Text Editors :: Integrated Development Environments (IDE)

[options]
packages = find:
include_package_data = True
python_requires = ~=3.7
setup_requires =
    setuptools_scm
install_requires =
    lookups
    qtpy
    PySide2
    PyYaml
    observable
zip_safe = false  # Because mypy cannot analyse a zip

[options.packages.find]
exclude =
    tests

[options.package_data]
* = *.ui, *.xml, *.json, *.yaml
openide =
    py.typed

[options.extras_require]
dev =
    flake8
    pytest
    pytest-cov
    pytest-html
    mypy
    check-manifest

[options.entry_points]
egg_info.writers =
    openide.yaml = openide:setup
lookup.default =
    MainLookup = openide.lookups.main_lookup:MainLookup

[flake8]
max-line-length = 100
show-source = true
max-complexity = 15
statistics = true

[mypy]
show_column_numbers = true
show_error_context = false
warn_no_return = true
disallow_untyped_defs = true
check_untyped_defs = false
ignore_missing_imports = false

[mypy-observable]
ignore_missing_imports = true

[mypy-tests]
ignore_errors = true

[mypy-setup]
ignore_errors = true
