[metadata]
name = EventManager01
description = Selection tutorial from Netbeans

[options]
packages = find:
include_package_data = True
python_requires = ~=3.7
setup_requires =
    openide
install_requires =
    openide

[options.entry_points]
console_scripts =
    nbm-selection-01 = nbm_selection_01:main

[options.package_data]
* = *.ui

[flake8]
max-line-length = 100
show-source = true
max-complexity = 15

[mypy]
show_column_numbers = true
show_error_context = false
warn_no_return = true
disallow_untyped_defs = true
check_untyped_defs = false
ignore_missing_imports = false

[mypy-setup]
ignore_errors = true
